--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -1,85 +1,185 @@
+#-------------------------------------------------------
 # \uD398\uC774\uC9C0 \uC81C\uBAA9
+#-------------------------------------------------------
 title.index=\uBA54\uC778 \uD398\uC774\uC9C0
-title.error=\uC5D0\uB7EC \uD398\uC774\uC9C0
-title.login=\uB85C\uADF8\uC778 \uD398\uC774\uC9C0
-title.register=\uD68C\uC6D0\uAC00\uC785 \uD398\uC774\uC9C0
-title.postList=Post List
+title.login=\uB85C\uADF8\uC778
+title.register=\uD68C\uC6D0\uAC00\uC785
+title.post.list=\uAC8C\uC2DC\uAE00 \uBAA9\uB85D
+title.post.detail=\uAC8C\uC2DC\uAE00 \uC0C1\uC138
+title.post.create=\uAC8C\uC2DC\uAE00 \uC791\uC131
+title.post.edit=\uAC8C\uC2DC\uAE00 \uC218\uC815
 title.category.register=\uCE74\uD14C\uACE0\uB9AC \uB4F1\uB85D
+title.mypage=\uB9C8\uC774\uD398\uC774\uC9C0
+title.admin=\uAD00\uB9AC\uC790 \uD398\uC774\uC9C0
 
+#-------------------------------------------------------
 # \uBC84\uD2BC \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
 button.login=\uB85C\uADF8\uC778
 button.logout=\uB85C\uADF8\uC544\uC6C3
 button.register=\uB4F1\uB85D
-button.home=\uD648\uC73C\uB85C \uC774\uB3D9
+button.submit=\uB4F1\uB85D
+button.cancel=\uCDE8\uC18C
+button.update=\uC218\uC815
+button.delete=\uC0AD\uC81C
+button.save=\uC800\uC7A5
+button.back=\uB4A4\uB85C \uAC00\uAE30
+button.home=\uD648\uC73C\uB85C
+button.search=\uAC80\uC0C9
+button.user.register=\uD68C\uC6D0\uAC00\uC785
 button.searchZipCode=\uC6B0\uD3B8\uBC88\uD638 \uCC3E\uAE30
 button.board=\uAC8C\uC2DC\uD310
-button.view=View
-button.edit=Edit
-button.delete=Delete
-button.search=Search
-button.feedback=Send Feedback
+button.post.write=\uAE00\uC4F0\uAE30
+button.post.list=\uBAA9\uB85D\uC73C\uB85C
+button.post.edit=\uC218\uC815\uD558\uAE30
+button.post.delete=\uC0AD\uC81C\uD558\uAE30
+button.comment.submit=\uB313\uAE00 \uB4F1\uB85D
+button.try.again=\uB2E4\uC2DC \uC2DC\uB3C4
 
+#-------------------------------------------------------
 # \uBA54\uC778 \uCF58\uD150\uCE20
+#-------------------------------------------------------
 welcome.message=\uC6B0\uB9AC \uC0AC\uC774\uD2B8\uC5D0 \uC624\uC2E0 \uAC83\uC744 \uD658\uC601\uD569\uB2C8\uB2E4!
+main.subtitle=\uB2E4\uC591\uD55C \uC8FC\uC81C\uB85C \uC18C\uD1B5\uD574\uBCF4\uC138\uC694
+main.popular.posts=\uC778\uAE30 \uAC8C\uC2DC\uAE00
+main.recent.posts=\uCD5C\uADFC \uAC8C\uC2DC\uAE00
 
+#-------------------------------------------------------
 # \uD478\uD130 \uD14D\uC2A4\uD2B8
-footer.copyright= 2025 \uC6B0\uB9AC \uC0AC\uC774\uD2B8
+#-------------------------------------------------------
+footer.copyright=\u00A9 2025 \uC6B0\uB9AC \uC0AC\uC774\uD2B8
+footer.terms=\uC774\uC6A9\uC57D\uAD00
+footer.privacy=\uAC1C\uC778\uC815\uBCF4\uCC98\uB9AC\uBC29\uCE68
+footer.contact=\uBB38\uC758\uD558\uAE30
 
+#-------------------------------------------------------
 # \uB77C\uBCA8 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
 label.username=\uC774\uBA54\uC77C
 label.password=\uBE44\uBC00\uBC88\uD638
 label.email=\uC774\uBA54\uC77C \uC8FC\uC18C
 label.name=\uC774\uB984
+label.addressInfo=\uC8FC\uC18C\uC815\uBCF4
 label.zipCode=\uC6B0\uD3B8\uBC88\uD638
 label.streetAddress=\uC8FC\uC18C
 label.detailAddress=\uC0C1\uC138 \uC8FC\uC18C
-label.author=Author
-label.title=Title
 label.category.name=\uCE74\uD14C\uACE0\uB9AC \uC774\uB984
 label.category.parent=\uBD80\uBAA8 \uCE74\uD14C\uACE0\uB9AC
+label.post.author=\uC791\uC131\uC790
+label.post.date=\uC791\uC131\uC77C
+label.post.views=\uC870\uD68C\uC218
+label.post.comments=\uB313\uAE00 \uC218
+label.comment.content=\uB313\uAE00 \uB0B4\uC6A9
+label.search.keyword=\uAC80\uC0C9\uC5B4
 
-# \uC5D0\uB7EC \uBC0F \uB85C\uADF8\uC778 \uD398\uC774\uC9C0 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
+# \uC5D0\uB7EC \uD398\uC774\uC9C0 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
 error.title=\uC5D0\uB7EC \uBC1C\uC0DD!
 error.content=\uC8C4\uC1A1\uD569\uB2C8\uB2E4. \uC694\uCCAD\uD55C \uD398\uC774\uC9C0\uB098 \uAE30\uB2A5\uC744 \uCC98\uB9AC\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+
+# 4xx \uC5D0\uB7EC
 error.4xx.title=\uD074\uB77C\uC774\uC5B8\uD2B8 \uC5D0\uB7EC \uBC1C\uC0DD
 error.4xx.content=\uD074\uB77C\uC774\uC5B8\uD2B8 \uCE21\uC5D0\uC11C \uBC1C\uC0DD\uD55C \uBB38\uC81C\uB85C \uC694\uCCAD\uC744 \uCC98\uB9AC\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uC8FC\uC18C\uB97C \uD655\uC778\uD558\uAC70\uB098 \uB2E4\uC2DC \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
+error.400.title=\uC798\uBABB\uB41C \uC694\uCCAD\uC785\uB2C8\uB2E4
+error.400.content=\uC694\uCCAD\uC5D0 \uC624\uB958\uAC00 \uC788\uC5B4 \uCC98\uB9AC\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uC785\uB825 \uAC12\uC744 \uD655\uC778\uD574 \uC8FC\uC138\uC694.
+error.401.title=\uC778\uC99D \uC2E4\uD328: \uB85C\uADF8\uC778 \uD6C4 \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694
+error.401.content=\uB85C\uADF8\uC778 \uD6C4 \uC694\uCCAD\uC744 \uB2E4\uC2DC \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
+error.403.title=\uC811\uADFC \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4
+error.403.content=\uD604\uC7AC \uACC4\uC815\uC73C\uB85C\uB294 \uC811\uADFC\uD560 \uC218 \uC5C6\uB294 \uD398\uC774\uC9C0\uC785\uB2C8\uB2E4.
+error.404.title=\uD398\uC774\uC9C0\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
+error.404.content=\uC694\uCCAD\uD55C \uD398\uC774\uC9C0\uAC00 \uC874\uC7AC\uD558\uC9C0 \uC54A\uAC70\uB098 \uC0AD\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uC8FC\uC18C\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
+
+# 5xx \uC5D0\uB7EC
 error.5xx.title=\uC11C\uBC84 \uC5D0\uB7EC \uBC1C\uC0DD
 error.5xx.content=\uC11C\uBC84\uC5D0\uC11C \uBB38\uC81C\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4. \uC7A0\uC2DC \uD6C4 \uB2E4\uC2DC \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
-error.404.title=\uD398\uC774\uC9C0\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
-error.404.content=\uC694\uCCAD\uD55C \uD398\uC774\uC9C0\uAC00 \uC874\uC7AC\uD558\uC9C0 \uC54A\uAC70\uB098 \uC0AD\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uC8FC\uC18C\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
-error.500.title=\uB0B4\uBD80 \uC11C\uBC84 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
+error.500.title=\uB0B4\uBD80 \uC11C\uBC84 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4
 error.500.content=\uC11C\uBC84 \uB0B4\uBD80\uC5D0\uC11C \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4. \uC7A0\uC2DC \uD6C4 \uB2E4\uC2DC \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
-error.401.title=\uC778\uC99D \uC2E4\uD328: \uB85C\uADF8\uC778 \uD6C4 \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
-error.401.content=\uB85C\uADF8\uC778 \uD6C4 \uC694\uCCAD\uC744 \uB2E4\uC2DC \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
-error.403.title=\uC811\uADFC \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
-error.403.content=\uD604\uC7AC \uACC4\uC815\uC73C\uB85C\uB294 \uC811\uADFC\uD560 \uC218 \uC5C6\uB294 \uD398\uC774\uC9C0\uC785\uB2C8\uB2E4.
-error.503.title=\uC11C\uBE44\uC2A4\uAC00 \uC77C\uC2DC\uC801\uC73C\uB85C \uC911\uB2E8\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+error.503.title=\uC11C\uBE44\uC2A4\uAC00 \uC77C\uC2DC\uC801\uC73C\uB85C \uC911\uB2E8\uB418\uC5C8\uC2B5\uB2C8\uB2E4
 error.503.content=\uD604\uC7AC \uC11C\uBE44\uC2A4\uAC00 \uC77C\uC2DC\uC801\uC73C\uB85C \uC911\uB2E8\uB418\uC5B4 \uC694\uCCAD\uC744 \uCC98\uB9AC\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uC7A0\uC2DC \uD6C4 \uB2E4\uC2DC \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
 
-# \uB85C\uADF8\uC778 \uD398\uC774\uC9C0 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
+# \uB85C\uADF8\uC778/\uD68C\uC6D0\uAC00\uC785 \uAD00\uB828 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
 login.title=\uB85C\uADF8\uC778\uD558\uC138\uC694!
 login.error=\uC544\uC774\uB514 \uB610\uB294 \uBE44\uBC00\uBC88\uD638\uAC00 \uC798\uBABB\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 login.logout.success=\uC131\uACF5\uC801\uC73C\uB85C \uB85C\uADF8\uC544\uC6C3\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+login.no.account=\uACC4\uC815\uC774 \uC5C6\uC73C\uC2E0\uAC00\uC694?
+login.remember.me=\uB85C\uADF8\uC778 \uC0C1\uD0DC \uC720\uC9C0
 
-# \uD68C\uC6D0\uAC00\uC785 \uD398\uC774\uC9C0 \uD14D\uC2A4\uD2B8
 register.title=\uD68C\uC6D0\uAC00\uC785\uD558\uAE30!
+register.success=\uD68C\uC6D0\uAC00\uC785\uC774 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB85C\uADF8\uC778\uD574 \uC8FC\uC138\uC694.
+register.terms=\uC774\uC6A9\uC57D\uAD00\uC5D0 \uB3D9\uC758\uD569\uB2C8\uB2E4.
+register.privacy=\uAC1C\uC778\uC815\uBCF4\uCC98\uB9AC\uBC29\uCE68\uC5D0 \uB3D9\uC758\uD569\uB2C8\uB2E4.
 
-# \uD3EC\uC2A4\uD2B8 \uAD00\uB828 \uD14D\uC2A4\uD2B8
-post.list.title=All Posts
+#-------------------------------------------------------
+# \uAC8C\uC2DC\uAE00 \uAD00\uB828 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
 post.id=ID
-post.title=Title
-post.author=Author
-post.date=Date
-post.actions=Actions
+post.title=\uC81C\uBAA9
+post.content=\uB0B4\uC6A9
+post.category=\uCE74\uD14C\uACE0\uB9AC
+post.list=\uAC8C\uC2DC\uAE00 \uBAA9\uB85D
+post.create=\uAC8C\uC2DC\uAE00 \uB4F1\uB85D
+post.edit=\uAC8C\uC2DC\uAE00 \uC218\uC815
+post.detail=\uAC8C\uC2DC\uAE00 \uC0C1\uC138
+post.empty=\uB4F1\uB85D\uB41C \uAC8C\uC2DC\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+post.author=\uC791\uC131\uC790
+post.time=\uC791\uC131 \uC2DC\uAC04
+post.comment.count=\uB313\uAE00 \uC218
+post.delete.confirm=\uC815\uB9D0 \uC774 \uAC8C\uC2DC\uAE00\uC744 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 
-# \uAC80\uC0C9 \uBC0F \uD53C\uB4DC\uBC31 \uC139\uC158
-search.title=Search Posts
-feedback.title=Feedback Section
-feedback.message=Have feedback? Let us know!
-feedback.alert=Thank you for your feedback!
+#-------------------------------------------------------
+# \uB313\uAE00 \uAD00\uB828 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
+comment.title=\uB313\uAE00
+comment.write=\uB313\uAE00 \uC791\uC131
+comment.empty=\uB4F1\uB85D\uB41C \uB313\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+comment.login.required=\uB313\uAE00\uC744 \uC791\uC131\uD558\uB824\uBA74 \uB85C\uADF8\uC778\uC774 \uD544\uC694\uD569\uB2C8\uB2E4.
+comment.submit=\uB4F1\uB85D
+comment.author=\uC791\uC131\uC790
+comment.time=\uC791\uC131 \uC2DC\uAC04
+comment.content=\uB0B4\uC6A9
 
+#-------------------------------------------------------
+# \uAC80\uC0C9 \uBC0F \uD544\uD130 \uAD00\uB828
+#-------------------------------------------------------
+search.title=\uAC8C\uC2DC\uAE00 \uAC80\uC0C9
+search.placeholder=\uAC80\uC0C9\uC5B4\uB97C \uC785\uB825\uD558\uC138\uC694
+search.button=\uAC80\uC0C9
+search.no.results=\uAC80\uC0C9 \uACB0\uACFC\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
+search.results=\uAC80\uC0C9 \uACB0\uACFC
+filter.category=\uCE74\uD14C\uACE0\uB9AC \uD544\uD130
+filter.date=\uB0A0\uC9DC \uD544\uD130
+filter.all=\uC804\uCCB4
+
+#-------------------------------------------------------
+# \uD53C\uB4DC\uBC31 \uC139\uC158
+#-------------------------------------------------------
+feedback.title=\uD53C\uB4DC\uBC31
+feedback.message=\uC758\uACAC\uC774 \uC788\uC73C\uC2E0\uAC00\uC694? \uC54C\uB824\uC8FC\uC138\uC694!
+feedback.submit=\uC81C\uCD9C
+feedback.alert=\uD53C\uB4DC\uBC31\uC744 \uBCF4\uB0B4\uC8FC\uC154\uC11C \uAC10\uC0AC\uD569\uB2C8\uB2E4!
+
+#-------------------------------------------------------
 # \uD655\uC778 \uBA54\uC2DC\uC9C0
-confirm.delete=Are you sure you want to delete this post?
+#-------------------------------------------------------
+confirm.delete=\uC815\uB9D0 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+confirm.cancel=\uC791\uC131\uC744 \uCDE8\uC18C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C? \uC791\uC131 \uC911\uC778 \uB0B4\uC6A9\uC740 \uC800\uC7A5\uB418\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+confirm.logout=\uB85C\uADF8\uC544\uC6C3 \uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 
+#-------------------------------------------------------
 # \uC635\uC158 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
 option.none=\uC5C6\uC74C
+option.select=\uC635\uC158\uC744 \uC120\uD0DD\uD558\uC138\uC694
+option.yes=\uC608
+option.no=\uC544\uB2C8\uC624
+
+#-------------------------------------------------------
+# \uC54C\uB9BC \uBA54\uC2DC\uC9C0
+#-------------------------------------------------------
+alert.success=\uC131\uACF5\uC801\uC73C\uB85C \uCC98\uB9AC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+alert.error=\uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
+alert.info=\uC54C\uB9BC: 
+alert.warning=\uC8FC\uC758: 
