파일 업로드 및 리팩토링

--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -128,6 +128,8 @@ post.author=\uC791\uC131\uC790
 post.time=\uC791\uC131 \uC2DC\uAC04
 post.comment.count=\uB313\uAE00 \uC218
 post.delete.confirm=\uC815\uB9D0 \uC774 \uAC8C\uC2DC\uAE00\uC744 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+post.attachments=\uD30C\uC77C \uCCA8\uBD80
+
 
 #-------------------------------------------------------
 # \uB313\uAE00 \uAD00\uB828 \uD14D\uC2A4\uD2B8
@@ -140,6 +142,7 @@ comment.submit=\uB4F1\uB85D
 comment.author=\uC791\uC131\uC790
 comment.time=\uC791\uC131 \uC2DC\uAC04
 comment.content=\uB0B4\uC6A9
+comment.placeholder=\uB313\uAE00\uC744 \uC791\uC131\uD574\uC8FC\uC138\uC694
 
 #-------------------------------------------------------
 # \uAC80\uC0C9 \uBC0F \uD544\uD130 \uAD00\uB828
@@ -183,3 +186,10 @@ alert.success=\uC131\uACF5\uC801\uC73C\uB85C \uCC98\uB9AC\uB418\uC5C8\uC2B5\uB2C
 alert.error=\uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
 alert.info=\uC54C\uB9BC: 
 alert.warning=\uC8FC\uC758: 
+
+#-------------------------------------------------------
+# \uD30C\uC77C \uBA54\uC2DC\uC9C0
+#-------------------------------------------------------
+file.drag.message=\uD30C\uC77C\uC744 \uB04C\uC5B4\uB2E4 \uB193\uAC70\uB098 \uD074\uB9AD\uD558\uC5EC \uC5C5\uB85C\uB4DC \uD558\uC138\uC694
+file.max.size=\uAC01 \uD30C\uC77C\uC740 \uCD5C\uB300 20MB \uAE4C\uC9C0 \uC774\uBA70, \uBAA8\uB4E0 \uD30C\uC77C\uC740 \uCD5C\uB300 25MB \uAE4C\uC9C0 \uC5C5\uB85C\uB4DC \uB429\uB2C8\uB2E4.
+
