회원가입 폼에 비밀번호 확인 기능 추가

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -23,6 +23,7 @@ title.register=Register Page
 # Label Text
 label.username=Email
 label.password=Password
+label.passwordConfirm=Confirm Password
 label.email=Email Address
 label.name=Name
 label.zipCode=Zip Code
