--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -57,6 +57,7 @@ footer.contact=\uBB38\uC758\uD558\uAE30
 #-------------------------------------------------------
 label.username=\uC774\uBA54\uC77C
 label.password=\uBE44\uBC00\uBC88\uD638
+label.passwordConfirm=\uBE44\uBC00\uBC88\uD638 \uD655\uC778
 label.email=\uC774\uBA54\uC77C \uC8FC\uC18C
 label.name=\uC774\uB984
 label.addressInfo=\uC8FC\uC18C\uC815\uBCF4
