게시판 완성

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,42 +1,270 @@
-# Page Titles
-title.index=Main Page
+#-------------------------------------------------------
+# Application Basic Information
+#-------------------------------------------------------
+app.name=Our Site
+site.name=MySite
 
+#-------------------------------------------------------
+# Page Titles
+#-------------------------------------------------------
+title.default=Our Site
+title.index=Main Page
+title.login=Login
+title.register=Sign Up
+title.post.list=Posts
+title.post.detail=Post Details
+title.post.create=Create Post
+title.post.edit=Edit Post
+title.category.register=Register Category
+title.mypage=My Page
+title.admin=Admin Page
+
+#-------------------------------------------------------
 # Button Text
+#-------------------------------------------------------
 button.login=Login
 button.logout=Logout
 button.register=Register
-button.home=Go to Home
-button.searchZipCode=Search Zip Code
+button.submit=Submit
+button.cancel=Cancel
+button.update=Update
+button.delete=Delete
+button.save=Save
+button.back=Back
+button.home=Home
+button.search=Search
+button.user.register=Sign Up
+button.searchZipCode=Find Zip Code
 button.board=Board
+button.post.write=Write Post
+button.post.list=Back to List
+button.post.edit=Edit
+button.post.delete=Delete
+button.comment.submit=Submit Comment
+button.try.again=Try Again
+button.remove=Remove
+button.theme.toggle.title=Toggle Theme
 
+#-------------------------------------------------------
 # Main Content
+#-------------------------------------------------------
 welcome.message=Welcome to Our Site!
+main.subtitle=Connect and communicate on various topics
+main.popular.posts=Popular Posts
+main.recent.posts=Recent Posts
 
+#-------------------------------------------------------
+# Index Page Hero Section
+#-------------------------------------------------------
+index.hero.title=Welcome to Our Site!
+index.hero.subtitle=An intuitive community with the latest trends. Start now!
+index.hero.button.exploreBoard=Explore Board
+
+#-------------------------------------------------------
 # Footer Text
+#-------------------------------------------------------
 footer.copyright=\u00A9 2025 Our Site
+footer.terms=Terms of Service
+footer.privacy=Privacy Policy
+footer.contact=Contact Us
 
-# Common Titles
-title.error=Error Page
-title.login=Login Page
-title.register=Register Page
-
+#-------------------------------------------------------
 # Label Text
+#-------------------------------------------------------
 label.username=Email
 label.password=Password
 label.passwordConfirm=Confirm Password
 label.email=Email Address
 label.name=Name
+label.addressInfo=Address Information
 label.zipCode=Zip Code
 label.streetAddress=Address
-label.detailAddress=Detailed Address
+label.detailAddress=Detail Address
+label.category.name=Category Name
+label.category.parent=Parent Category
+label.post.author=Author
+label.post.date=Date
+label.post.views=Views
+label.post.comments=Comments
+label.comment.content=Comment Content
+label.search.keyword=Search Keyword
 
+#-------------------------------------------------------
+# Placeholder Text
+#-------------------------------------------------------
+label.username.placeholder=Enter your email address
+label.password.placeholder=Enter your password
+placeholder.email=Enter your email address
+placeholder.name=Enter your name
+placeholder.passwordConfirm=Re-enter your password
+placeholder.detailAddress=Enter detail address
+placeholder.category.name=Enter category name
+post.title.placeholder=Enter title
+post.content.placeholder=Enter content
+post.search.placeholder=Enter search term...
+comment.placeholder=Write a comment
+search.placeholder=Enter search term
+
+#-------------------------------------------------------
 # Error Page Text
-error.title=An Error Occurred!
+#-------------------------------------------------------
+error.title=Error Occurred!
+error.content=Sorry, we cannot process the requested page or function.
 
-# Login Page Text
-login.title=Please Log In!
+# 4xx Errors
+error.4xx.title=Client Error Occurred
+error.4xx.content=There was a client-side issue preventing the request from being processed. Please check the URL or try again.
+error.400.title=Bad Request
+error.400.content=There was an error in the request that prevented processing. Please check your input.
+error.401.title=Authentication Failed: Please login and try again
+error.401.content=Please login and try the request again.
+error.403.title=Access Denied
+error.403.content=Your current account does not have access to this page.
+error.404.title=Page Not Found
+error.404.content=The requested page does not exist or has been deleted. Please check the URL.
+
+# 5xx Errors
+error.5xx.title=Server Error Occurred
+error.5xx.content=There was a server problem. Please try again later.
+error.500.title=Internal Server Error
+error.500.content=An internal server error occurred. Please try again later.
+error.503.title=Service Temporarily Unavailable
+error.503.content=The service is temporarily unavailable and cannot process requests. Please try again later.
+
+#-------------------------------------------------------
+# Error Page Details
+#-------------------------------------------------------
+error.details.status.label=Status:
+error.details.status.default=No status information
+error.details.error.label=Error:
+error.details.error.default=No error information
+error.details.message.label=Message:
+error.details.message.default=No message
+
+#-------------------------------------------------------
+# Login/Registration Related Text
+#-------------------------------------------------------
+login.title=Please Login!
 login.error=Invalid username or password.
-login.logout.success=You have been logged out successfully.
+login.logout.success=Successfully logged out.
+login.no.account=Don't have an account?
+login.remember.me=Remember me
 
-# Register Page Text
 register.title=Sign Up!
+register.success=Registration completed. Please login.
+register.terms=I agree to the Terms of Service.
+register.privacy=I agree to the Privacy Policy.
+
+#-------------------------------------------------------
+# Post Related Text
+#-------------------------------------------------------
+post.id=ID
+post.title=Title
+post.title.default=No Title
+post.content=Content
+post.category=Category
+post.category.unclassified=Uncategorized
+post.list=Post List
+post.create=Create Post
+post.edit=Edit Post
+post.detail=Post Details
+post.empty=No posts available.
+post.author=Author
+post.author.unknown=Unknown Author
+post.time=Created Time
+post.comment.count=Comments
+post.delete.confirm=Are you sure you want to delete this?
+post.attachments=File Attachments
+post.existing.attachments=Existing Attachments
+post.new.attachments=New Attachments
+post.downloads=Downloads
+
+#-------------------------------------------------------
+# Post List Page
+#-------------------------------------------------------
+pagination.info.items=Items {0} - {1} of {2} total
+
+#-------------------------------------------------------
+# File Upload Related
+#-------------------------------------------------------
+file.icon=\uD83D\uDCCE
+file.drag.message=Drag and drop files or click to upload
+file.max.size=Max 10MB
+file.max.files=Max 5 files
+file.supported.formats=JPG, PNG, GIF, PDF, ZIP
+file.selected.files=Selected Files
+post.file.size.kb=KB
+file.size.unit.bytes=Bytes
+file.size.unit.kb=KB
+file.size.unit.mb=MB
+file.size.unit.gb=GB
+
+#-------------------------------------------------------
+# File Error Messages
+#-------------------------------------------------------
+error.file.max.files=Maximum 5 files can be uploaded
+error.file.max.size=Only files under 10MB can be uploaded
+
+#-------------------------------------------------------
+# Image Related
+#-------------------------------------------------------
+image.preview.alt=Image Preview
+
+#-------------------------------------------------------
+# Comment Related Text
+#-------------------------------------------------------
+comment.title=Comments
+comment.write=Write Comment
+comment.empty=No comments available.
+comment.login.required=Login required to write comments.
+comment.login.prefix=You need to
+comment.login.suffix=to write comments.
+comment.submit=Submit
+comment.author=Author
+comment.author.unknown=Unknown Author
+comment.time=Created Time
+comment.content=Content
+
+#-------------------------------------------------------
+# Search and Filter Related
+#-------------------------------------------------------
+search.title=Search Posts
+search.button=Search
+search.no.results=No search results found.
+search.results=Search Results
+filter.category=Category Filter
+filter.date=Date Filter
+filter.all=All
+
+#-------------------------------------------------------
+# Feedback Section
+#-------------------------------------------------------
+feedback.title=Feedback
+feedback.message=Have any feedback? Let us know!
+feedback.submit=Submit
+feedback.alert=Thank you for your feedback!
+
+#-------------------------------------------------------
+# Confirmation Messages
+#-------------------------------------------------------
+confirm.delete=Are you sure you want to delete this?
+confirm.delete.post=Are you sure you want to delete this post?
+confirm.delete.comment=Are you sure you want to delete this comment?
+confirm.cancel=Are you sure you want to cancel? Your changes will not be saved.
+confirm.logout=Are you sure you want to logout?
+
+#-------------------------------------------------------
+# Option Text
+#-------------------------------------------------------
+option.none=None
+option.select=Select an option
+option.yes=Yes
+option.no=No
+
+#-------------------------------------------------------
+# Alert Messages
+#-------------------------------------------------------
+alert.success=Successfully processed.
+alert.error=An error occurred.
+alert.info=Notice: 
+alert.warning=Warning: 
