--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -1,6 +1,13 @@
 #-------------------------------------------------------
+# \uC560\uD50C\uB9AC\uCF00\uC774\uC158 \uAE30\uBCF8 \uC815\uBCF4
+#-------------------------------------------------------
+app.name=\uC6B0\uB9AC \uC0AC\uC774\uD2B8
+site.name=MySite
+
+#-------------------------------------------------------
 # \uD398\uC774\uC9C0 \uC81C\uBAA9
 #-------------------------------------------------------
+title.default=\uC6B0\uB9AC \uC0AC\uC774\uD2B8
 title.index=\uBA54\uC778 \uD398\uC774\uC9C0
 title.login=\uB85C\uADF8\uC778
 title.register=\uD68C\uC6D0\uAC00\uC785
@@ -35,6 +42,8 @@ button.post.edit=\uC218\uC815\uD558\uAE30
 button.post.delete=\uC0AD\uC81C\uD558\uAE30
 button.comment.submit=\uB313\uAE00 \uB4F1\uB85D
 button.try.again=\uB2E4\uC2DC \uC2DC\uB3C4
+button.remove=\uC0AD\uC81C
+button.theme.toggle.title=\uD14C\uB9C8 \uBCC0\uACBD
 
 #-------------------------------------------------------
 # \uBA54\uC778 \uCF58\uD150\uCE20
@@ -43,6 +52,13 @@ welcome.message=\uC6B0\uB9AC \uC0AC\uC774\uD2B8\uC5D0 \uC624\uC2E0 \uAC83\uC744 
 main.subtitle=\uB2E4\uC591\uD55C \uC8FC\uC81C\uB85C \uC18C\uD1B5\uD574\uBCF4\uC138\uC694
 main.popular.posts=\uC778\uAE30 \uAC8C\uC2DC\uAE00
 main.recent.posts=\uCD5C\uADFC \uAC8C\uC2DC\uAE00
+
+#-------------------------------------------------------
+# \uC778\uB371\uC2A4 \uD398\uC774\uC9C0 \uD788\uC5B4\uB85C \uC139\uC158
+#-------------------------------------------------------
+index.hero.title=\uC6B0\uB9AC \uC0AC\uC774\uD2B8\uC5D0 \uC624\uC2E0 \uAC83\uC744 \uD658\uC601\uD569\uB2C8\uB2E4!
+index.hero.subtitle=\uCD5C\uC2E0 \uD2B8\uB80C\uB4DC\uC758 \uC9C1\uAD00\uC801\uC778 \uCEE4\uBBA4\uB2C8\uD2F0, \uC9C0\uAE08 \uBC14\uB85C \uC2DC\uC791\uD574\uBCF4\uC138\uC694.
+index.hero.button.exploreBoard=\uAC8C\uC2DC\uD310 \uB458\uB7EC\uBCF4\uAE30
 
 #-------------------------------------------------------
 # \uD478\uD130 \uD14D\uC2A4\uD2B8
@@ -74,6 +90,22 @@ label.comment.content=\uB313\uAE00 \uB0B4\uC6A9
 label.search.keyword=\uAC80\uC0C9\uC5B4
 
 #-------------------------------------------------------
+# \uD50C\uB808\uC774\uC2A4\uD640\uB354 \uD14D\uC2A4\uD2B8
+#-------------------------------------------------------
+label.username.placeholder=\uC774\uBA54\uC77C \uC8FC\uC18C\uB97C \uC785\uB825\uD558\uC138\uC694
+label.password.placeholder=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD558\uC138\uC694
+placeholder.email=\uC774\uBA54\uC77C \uC8FC\uC18C\uB97C \uC785\uB825\uD558\uC138\uC694
+placeholder.name=\uC774\uB984\uC744 \uC785\uB825\uD558\uC138\uC694
+placeholder.passwordConfirm=\uBE44\uBC00\uBC88\uD638\uB97C \uB2E4\uC2DC \uC785\uB825\uD558\uC138\uC694
+placeholder.detailAddress=\uC0C1\uC138 \uC8FC\uC18C\uB97C \uC785\uB825\uD558\uC138\uC694
+placeholder.category.name=\uCE74\uD14C\uACE0\uB9AC \uC774\uB984\uC744 \uC785\uB825\uD558\uC138\uC694
+post.title.placeholder=\uC81C\uBAA9\uC744 \uC785\uB825\uD558\uC138\uC694
+post.content.placeholder=\uB0B4\uC6A9\uC744 \uC785\uB825\uD558\uC138\uC694
+post.search.placeholder=\uAC80\uC0C9\uC5B4 \uC785\uB825...
+comment.placeholder=\uB313\uAE00\uC744 \uC791\uC131\uD574\uC8FC\uC138\uC694
+search.placeholder=\uAC80\uC0C9\uC5B4\uB97C \uC785\uB825\uD558\uC138\uC694
+
+#-------------------------------------------------------
 # \uC5D0\uB7EC \uD398\uC774\uC9C0 \uD14D\uC2A4\uD2B8
 #-------------------------------------------------------
 error.title=\uC5D0\uB7EC \uBC1C\uC0DD!
@@ -100,6 +132,16 @@ error.503.title=\uC11C\uBE44\uC2A4\uAC00 \uC77C\uC2DC\uC801\uC73C\uB85C \uC911\u
 error.503.content=\uD604\uC7AC \uC11C\uBE44\uC2A4\uAC00 \uC77C\uC2DC\uC801\uC73C\uB85C \uC911\uB2E8\uB418\uC5B4 \uC694\uCCAD\uC744 \uCC98\uB9AC\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uC7A0\uC2DC \uD6C4 \uB2E4\uC2DC \uC2DC\uB3C4\uD574 \uC8FC\uC138\uC694.
 
 #-------------------------------------------------------
+# \uC5D0\uB7EC \uD398\uC774\uC9C0 \uC0C1\uC138 \uC815\uBCF4
+#-------------------------------------------------------
+error.details.status.label=\uC0C1\uD0DC:
+error.details.status.default=\uC0C1\uD0DC \uC815\uBCF4 \uC5C6\uC74C
+error.details.error.label=\uC624\uB958:
+error.details.error.default=\uC624\uB958 \uC815\uBCF4 \uC5C6\uC74C
+error.details.message.label=\uBA54\uC2DC\uC9C0:
+error.details.message.default=\uBA54\uC2DC\uC9C0 \uC5C6\uC74C
+
+#-------------------------------------------------------
 # \uB85C\uADF8\uC778/\uD68C\uC6D0\uAC00\uC785 \uAD00\uB828 \uD14D\uC2A4\uD2B8
 #-------------------------------------------------------
 login.title=\uB85C\uADF8\uC778\uD558\uC138\uC694!
@@ -118,19 +160,55 @@ register.privacy=\uAC1C\uC778\uC815\uBCF4\uCC98\uB9AC\uBC29\uCE68\uC5D0 \uB3D9\u
 #-------------------------------------------------------
 post.id=ID
 post.title=\uC81C\uBAA9
+post.title.default=\uC81C\uBAA9 \uC5C6\uC74C
 post.content=\uB0B4\uC6A9
 post.category=\uCE74\uD14C\uACE0\uB9AC
+post.category.unclassified=\uBBF8\uBD84\uB958
 post.list=\uAC8C\uC2DC\uAE00 \uBAA9\uB85D
 post.create=\uAC8C\uC2DC\uAE00 \uB4F1\uB85D
 post.edit=\uAC8C\uC2DC\uAE00 \uC218\uC815
 post.detail=\uAC8C\uC2DC\uAE00 \uC0C1\uC138
 post.empty=\uB4F1\uB85D\uB41C \uAC8C\uC2DC\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 post.author=\uC791\uC131\uC790
+post.author.unknown=\uC791\uC131\uC790 \uBBF8\uC0C1
 post.time=\uC791\uC131 \uC2DC\uAC04
 post.comment.count=\uB313\uAE00 \uC218
-post.delete.confirm=\uC815\uB9D0 \uC774 \uAC8C\uC2DC\uAE00\uC744 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+post.delete.confirm=\uC815\uB9D0 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 post.attachments=\uD30C\uC77C \uCCA8\uBD80
+post.existing.attachments=\uAE30\uC874 \uCCA8\uBD80 \uD30C\uC77C
+post.new.attachments=\uC0C8 \uCCA8\uBD80 \uD30C\uC77C
+post.downloads=\uB2E4\uC6B4\uB85C\uB4DC
 
+#-------------------------------------------------------
+# \uAC8C\uC2DC\uAE00 \uBAA9\uB85D \uD398\uC774\uC9C0
+#-------------------------------------------------------
+pagination.info.items=\uCD1D {2}\uAC1C \uD56D\uBAA9 \uC911 {0} - {1}\uBC88\uC9F8 \uD56D\uBAA9
+
+#-------------------------------------------------------
+# \uD30C\uC77C \uC5C5\uB85C\uB4DC \uAD00\uB828
+#-------------------------------------------------------
+file.icon=\uD83D\uDCCE
+file.drag.message=\uD30C\uC77C\uC744 \uB04C\uC5B4\uB2E4 \uB193\uAC70\uB098 \uD074\uB9AD\uD558\uC5EC \uC5C5\uB85C\uB4DC\uD558\uC138\uC694
+file.max.size=\uCD5C\uB300 10MB
+file.max.files=\uCD5C\uB300 5\uAC1C \uD30C\uC77C
+file.supported.formats=JPG, PNG, GIF, PDF, ZIP
+file.selected.files=\uC120\uD0DD\uB41C \uD30C\uC77C\uB4E4
+post.file.size.kb=KB
+file.size.unit.bytes=Bytes
+file.size.unit.kb=KB
+file.size.unit.mb=MB
+file.size.unit.gb=GB
+
+#-------------------------------------------------------
+# \uD30C\uC77C \uC5D0\uB7EC \uBA54\uC2DC\uC9C0
+#-------------------------------------------------------
+error.file.max.files=\uCD5C\uB300 5\uAC1C\uAE4C\uC9C0 \uC5C5\uB85C\uB4DC \uAC00\uB2A5\uD569\uB2C8\uB2E4
+error.file.max.size=10MB \uC774\uD558 \uD30C\uC77C\uB9CC \uC5C5\uB85C\uB4DC \uAC00\uB2A5\uD569\uB2C8\uB2E4
+
+#-------------------------------------------------------
+# \uC774\uBBF8\uC9C0 \uAD00\uB828
+#-------------------------------------------------------
+image.preview.alt=\uC774\uBBF8\uC9C0 \uBBF8\uB9AC\uBCF4\uAE30
 
 #-------------------------------------------------------
 # \uB313\uAE00 \uAD00\uB828 \uD14D\uC2A4\uD2B8
@@ -139,17 +217,18 @@ comment.title=\uB313\uAE00
 comment.write=\uB313\uAE00 \uC791\uC131
 comment.empty=\uB4F1\uB85D\uB41C \uB313\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 comment.login.required=\uB313\uAE00\uC744 \uC791\uC131\uD558\uB824\uBA74 \uB85C\uADF8\uC778\uC774 \uD544\uC694\uD569\uB2C8\uB2E4.
+comment.login.prefix=\uB313\uAE00\uC744 \uC791\uC131\uD558\uB824\uBA74
+comment.login.suffix=\uC774 \uD544\uC694\uD569\uB2C8\uB2E4.
 comment.submit=\uB4F1\uB85D
 comment.author=\uC791\uC131\uC790
+comment.author.unknown=\uC791\uC131\uC790 \uBBF8\uC0C1
 comment.time=\uC791\uC131 \uC2DC\uAC04
 comment.content=\uB0B4\uC6A9
-comment.placeholder=\uB313\uAE00\uC744 \uC791\uC131\uD574\uC8FC\uC138\uC694
 
 #-------------------------------------------------------
 # \uAC80\uC0C9 \uBC0F \uD544\uD130 \uAD00\uB828
 #-------------------------------------------------------
 search.title=\uAC8C\uC2DC\uAE00 \uAC80\uC0C9
-search.placeholder=\uAC80\uC0C9\uC5B4\uB97C \uC785\uB825\uD558\uC138\uC694
 search.button=\uAC80\uC0C9
 search.no.results=\uAC80\uC0C9 \uACB0\uACFC\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 search.results=\uAC80\uC0C9 \uACB0\uACFC
@@ -169,6 +248,8 @@ feedback.alert=\uD53C\uB4DC\uBC31\uC744 \uBCF4\uB0B4\uC8FC\uC154\uC11C \uAC10\uC
 # \uD655\uC778 \uBA54\uC2DC\uC9C0
 #-------------------------------------------------------
 confirm.delete=\uC815\uB9D0 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+confirm.delete.post=\uC815\uB9D0 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+confirm.delete.comment=\uC815\uB9D0 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 confirm.cancel=\uC791\uC131\uC744 \uCDE8\uC18C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C? \uC791\uC131 \uC911\uC778 \uB0B4\uC6A9\uC740 \uC800\uC7A5\uB418\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 confirm.logout=\uB85C\uADF8\uC544\uC6C3 \uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 
@@ -187,10 +268,3 @@ alert.success=\uC131\uACF5\uC801\uC73C\uB85C \uCC98\uB9AC\uB418\uC5C8\uC2B5\uB2C
 alert.error=\uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
 alert.info=\uC54C\uB9BC: 
 alert.warning=\uC8FC\uC758: 
-
-#-------------------------------------------------------
-# \uD30C\uC77C \uBA54\uC2DC\uC9C0
-#-------------------------------------------------------
-file.drag.message=\uD30C\uC77C\uC744 \uB04C\uC5B4\uB2E4 \uB193\uAC70\uB098 \uD074\uB9AD\uD558\uC5EC \uC5C5\uB85C\uB4DC \uD558\uC138\uC694
-file.max.size=\uAC01 \uD30C\uC77C\uC740 \uCD5C\uB300 20MB \uAE4C\uC9C0 \uC774\uBA70, \uBAA8\uB4E0 \uD30C\uC77C\uC740 \uCD5C\uB300 25MB \uAE4C\uC9C0 \uC5C5\uB85C\uB4DC \uB429\uB2C8\uB2E4.
-
