Oauth-google 추가

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -218,12 +218,13 @@ comment.write=Write Comment
 comment.empty=No comments available.
 comment.login.required=Login required to write comments.
 comment.login.prefix=You need to
-comment.login.suffix=to write comments.
-comment.submit=Submit
-comment.author=Author
-comment.author.unknown=Unknown Author
-comment.time=Created Time
-comment.content=Content
+comment.login.suffix=to write a comment.
+
+# Social Login
+login.social.title=Login with Social Account
+login.social.google=Login with Google
+login.social.kakao=Login with Kakao
+login.social.naver=Login with Naver
 
 #-------------------------------------------------------
 # Search and Filter Related
