--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -50,6 +50,12 @@ confirm.delete.comment=정말 이 댓글을 삭제하시겠습니까?
 comment.login.prefix=댓글을 작성하려면 
 comment.login.suffix=이 필요합니다.
 
+# 소셜 로그인
+login.social.title=소셜 계정으로 로그인
+login.social.google=Google로 로그인
+login.social.kakao=카카오로 로그인
+login.social.naver=네이버로 로그인
+
 # Post Edit Page
 image.preview.alt=이미지 미리보기
 file.size.unit.bytes=Bytes
