--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -268,3 +268,9 @@ alert.success=\uC131\uACF5\uC801\uC73C\uB85C \uCC98\uB9AC\uB418\uC5C8\uC2B5\uB2C
 alert.error=\uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
 alert.info=\uC54C\uB9BC: 
 alert.warning=\uC8FC\uC758: 
+
+# \uC18C\uC15C \uB85C\uADF8\uC778
+login.social.title=\uC18C\uC15C \uACC4\uC815\uC73C\uB85C \uB85C\uADF8\uC778
+login.social.google=\uAD6C\uAE00\uB85C \uB85C\uADF8\uC778
+login.social.kakao=\uCE74\uCE74\uC624\uB85C \uB85C\uADF8\uC778
+login.social.naver=\uB124\uC774\uBC84\uB85C \uB85C\uADF8\uC778
