댓글 페이징

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -185,6 +185,12 @@ post.downloads=Downloads
 pagination.info.items=Items {0} - {1} of {2} total
 
 #-------------------------------------------------------
+# Pagination
+#-------------------------------------------------------
+pagination.prev=Previous
+pagination.next=Next
+
+#-------------------------------------------------------
 # File Upload Related
 #-------------------------------------------------------
 file.icon=\uD83D\uDCCE
