--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -183,6 +183,8 @@ post.downloads=\uB2E4\uC6B4\uB85C\uB4DC
 # \uAC8C\uC2DC\uAE00 \uBAA9\uB85D \uD398\uC774\uC9C0
 #-------------------------------------------------------
 pagination.info.items=\uCD1D {2}\uAC1C \uD56D\uBAA9 \uC911 {0} - {1}\uBC88\uC9F8 \uD56D\uBAA9
+pagination.prev=이전
+pagination.next=다음
 
 #-------------------------------------------------------
 # \uD30C\uC77C \uC5C5\uB85C\uB4DC \uAD00\uB828
